- feat: KafkaUtils added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
+# Kafka Config
+#kafka.bootstrapAddress=10.120.0.12:9092,10.120.0.17:9092,10.120.0.20:9092
+kafka.bootstrapAddress=10.120.0.6:9092,10.120.0.17:9092,10.120.0.20:9092
+kafka.clientId=Producer
+kafka.acks=all
+kafka.retries=3
+kafka.batchSize=65536
+kafka.lingerMs=10
+kafka.bufferMemory=33554432
+kafka.compressionType=snappy
+logging.level.org.apache.kafka.clients.producer.ProducerConfig=OFF
+server.port=3002
