--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,5 @@
-#MYSQL CONFIG
-MYSQL_HOST=localhost
-MYSQL_PORT=3306
-MYSQL_DB=test
-MYSQL_USER=root
-MYSQL_PASS=root
+spring.profiles.active=dev
+
 #Spring data
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DB}?useSSL=false
 spring.datasource.username=${MYSQL_USER}
@@ -13,16 +9,5 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-
-# Kafka Config
-#kafka.bootstrapAddress=10.120.0.12:9092,10.120.0.17:9092,10.120.0.20:9092
-kafka.bootstrapAddress=10.120.0.6:9092,10.120.0.17:9092,10.120.0.20:9092
-kafka.clientId=Producer
-kafka.acks=all
-kafka.retries=3
-kafka.batchSize=65536
-kafka.lingerMs=10
-kafka.bufferMemory=33554432
-kafka.compressionType=snappy
-logging.level.org.apache.kafka.clients.producer.ProducerConfig=OFF
+#Server port
 server.port=3002
