--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,9 @@
 #MYSQL CONFIG
-MYSQL_HOST=localhost
+MYSQL_HOST=10.120.10.92
 MYSQL_PORT=3306
-MYSQL_DB=test
-MYSQL_USER=root
-MYSQL_PASS=root
+MYSQL_DB=roes_kafka
+MYSQL_USER=kafka
+MYSQL_PASS=@Kafka@123@
 
 # Kafka Config
 kafka.bootstrapAddress=10.120.0.12:9092,10.120.0.17:9092,10.120.0.20:9092
