--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,7 +10,7 @@ kafka.bootstrapAddress=10.120.0.12:9092,10.120.0.17:9092,10.120.0.20:9092
 kafka.clientId=Producer
 kafka.acks=all
 kafka.retries=3
-kafka.batchSize=65536
+kafka.batchSize=32000000
 kafka.lingerMs=10
 kafka.bufferMemory=33554432
 kafka.compressionType=snappy
